# mazzocchi-api-backend

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
api/: Cargo.toml
api/.sqlx/: query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-9401146f6cdb336984d9a85069e79253f0d5993034af764404692ed9ae1e85af.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
api/src/: config.rs  handler.rs  jwt_auth.rs  main.rs  model.rs  response.rs  route.rs
containers/api/: Dockerfile
migrations/: 20230402142655_init.up.sql  202311192332001_init.up.sql
passgenerator/: Cargo.toml
passgenerator/src/: main.rs
src/: config.rs  handler.rs  jwt_auth.rs  main.rs  model.rs  response.rs  route.rs
