[package]
name = "mazzocchi-api-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5"
axum = "0.6"
axum-extra = { version = "0.8", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
jsonwebtoken = "9.1.0"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "macros"] }
time = "0.3"
tiberius = { version = "0.12.2", features = ["tokio"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower-http = { version = "0.4", features = ["cors", "fs", "trace"] }
uuid = { version = "1.5", features = ["serde", "v4"] }
tiberius-mappers = "0.3.0"
sqlx-core = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
